styles.css
/*
    colors to use
    for the line above: #121212
    for white just use white
    for gray use rgba(255,255,255,0.25) or rgba(255,255,255,0.5) I am not sure
    it breaks at 594px width
*/
img {
    max-width: 100%;
    height: auto;
}
html, body {
    margin: 0;
    height: 100%;
    background-color: black;
    color: rgba(255,255,255,0.5);
    font-family: "Public Sans", sans-serif;
    scroll-behavior: smooth;
}


#top_section {
    margin-bottom: 1.2rem;
    display: flex;
    flex-wrap: wrap;
    border-bottom: 2px solid #222222;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
}
#name {
    font-size: 1.5rem;
    border: 0 0 1px gray;
    margin-right: auto;
}

.link {
    text-decoration: none;
    color: #808080;
    margin: 0px 1.2rem;
}
.link:hover {
    color: white;
}
#linkedin_top {
    color: white;
    margin-right: 0;
    background-color: #174879;
    padding: 5px 10px;
    border-radius: 4px;
}
#linkedin_box {
    background-color: white;
    color: #174879;
    padding: 0px 3px;
    border-radius: 2px;
}

#main_text_section {
    text-align: center;
    padding: 20px;
    margin: 40px auto;
}
#main_text {
    color: rgba(255,255,255,0.5);
    font-size: 2rem;
}

#hello_world {
    color: #174879; 
    margin: 10px 1.5rem;
    font-style: italic;
    font-weight: bolder;
}
.special_text {
    color: white;
    font-weight: bolder;
    margin-bottom: 40px;
}
#projects {
    margin-top: 50px;
    padding: 20px;
    text-align: center;
    color: rgba(255,255,255,0.5);
}
#projects_text {
    margin-bottom: 40px;
}
#about {
    text-align: center;
    padding: 20px;
    margin: 100px auto;
}
#about_text {
    margin-bottom: 40px;
}

#contact {
    text-align: center;
    padding: 20px;
    margin-bottom: 50px;
}

.logo {
    width: 48px;
    height: 48px;
    margin: 12px;
    background-color: white;
    padding: 4px;
    border-radius: 50px;
}

#more_to_come {
    color: white;
    text-align: center;
    margin-bottom: 20px;
}

@media (max-width: 768px) {
    #top_section {
        flex-direction: row;   
        align-items: center;
        justify-content: space-between;
        font-size: 0.8rem;
    }

    #name {
        font-size: 1rem;
    }

    #main_text_section {
        margin: 20px auto;
    }
    .special_text {
        font-size: 1.5rem;
    }
    #main_text {
        font-size: 1.5rem;
    }
    .normal_text {
        font-size: 0.75rem;
    }
    .logo {
        width: 64px;
        height: 64px;
    }
    .link {
        margin: 0 0.8rem;
    }
}

@media (max-width: 500px) {
    #top_section {
        font-size: 0.5rem;
    }
    #main_text {
        font-size: 1rem;
    }
    #emre_text {
        font-size: 1rem;
    }
    #rotating_text {
        font-size: 1rem;
    }
    .special_text {
        font-size: 1rem;
    }
    #projects_container {
        font-size: 0.8rem;
    }

    #hello_world {
        font-size: 0.65rem;
    }
    .logo {
        width: 48px;
        height: 48px;
    }
    .link {
        margin: 0 0.6rem;
    }
}
@media (max-width: 404px) {
    #name {
        font-size: 0.8rem;
    }
    #main_text {
        font-size: 1rem;
    }
}
@media (max-width: 384px) {
    #name {
        font-size: 0.7rem;
        margin-right: auto;
    }
}
@keyframes fallIn {
    0% {
        opacity: 0;
        transform: translateY(-100%);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

